added nav section

--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/project.css">
-    <title>Document</title>
+    <title>Rinterio</title>
 </head>
 <body>
-    
+    <!-- navbar section -->
+     <nav id="navbar">
+        <div class="nav-container">
+            <div class="nav-logo">
+                <div class="nav-img">
+                    <img id="green" src="./images/Group 1.png" alt="">
+                </div>
+                <span>Rinterio</span>
+            </div>
+            <div class="nav-list">
+                <ul>
+                    <li class="bold">Home</li>
+                    <li>Services</li>
+                    <li>Portfolio</li>
+                    <li>Blogs</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+            <div class="nav-search">
+                <div class="search-1" id="search">
+                    <img src="./images/Frame 2.png" alt="">
+                </div>
+                <div class="search-2" id="search">
+                    <img src="./images/Frame 3.png" alt="">
+                </div>
+                <div class="search-3" id="nav-book">
+                    <span>Book Consult</span>
+                    <img id="black" src="./images/Group 1.png" alt="">
+                </div>
+                <div class="search-4">
+                    <img src="./images/Frame 6.png" alt="">
+                </div>
+            </div>
+        </div>
+     </nav>
+     
 </body>
 </html>
