added banner section

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 </ul>
             </div>
             <div class="nav-search">
-                <div class="search-1" id="search">
+                <div class="search-1"  >
                     <img src="./images/Frame 2.png" alt="">
                 </div>
-                <div class="search-2" id="search">
+                <div class="search-2"  >
                     <img src="./images/Frame 3.png" alt="">
                 </div>
                 <div class="search-3" id="nav-book">
@@ -42,6 +42,20 @@
             </div>
         </div>
      </nav>
-     
+     <section id="banner">
+        <div class="banner-container">
+            <div class="banner-img">
+                <img src="./images/banner.png" alt="">
+            </div>
+            <div class="banner-text">
+                <h1>A barn house of this design has a striking appearance</h1>
+                <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+                <div id="banner-btn">
+                    <span>View Details</span>
+                    <img id="black" src="./images/Group 1.png" alt="">
+                </div>
+            </div>
+        </div>
+     </section>
 </body>
 </html>
