added rect text in css

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             </div>
         </div>
      </nav>
+     <!-- banner section -->
      <section id="banner">
         <div class="banner-container">
             <div class="banner-img">
@@ -57,5 +58,50 @@
             </div>
         </div>
      </section>
+     <main id="hero">
+        <section id="spaces">
+            <div class="dotted-img">
+                <img src="./images/Vector 14.png" alt="">
+            </div>
+            <div class="rect">
+                <div id="rect text">
+                    <div class="about">
+                        <img src="./images/Group 3.png" alt="">
+                        <span>About Us</span>
+                    </div>
+                    <div class="rect-head">
+                        <h2>We design thoughtful, liveable spaces</h2>
+                        <p>The barn house captivates with its blend of
+                            rustic charm and 
+                            modern sophistication, featuring weathered wood, sleek metal accents.
+                        </p>
+                    </div>
+                    <div class="rect-img-container">
+                        <div class="img-container">
+                            <img src="./images/commercial.png" alt="">
+                        </div>
+                        <div class="img-text">
+                            <h3>Commercial</h3>
+                            <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                        </div>
+                    </div>
+                    <div class="rect-img-container">
+                        <div class="img-container">
+                            <img src="./images/residential.png" alt="">
+                        </div>
+                        <div class="img-text">
+                            <h3>Residential</h3>
+                            <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="residential">
+                    <div class="residential-img">
+                        <img src="./images/Rectangle.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+     </main>
 </body>
 </html>
