--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                 </div>
             </div>
         </section>
+        <section id="number"></section>
      </main>
 </body>
 </html>
