changed img-text p in css

--- a/index.html
+++ b/index.html
@@ -102,7 +102,15 @@
                 </div>
             </div>
         </section>
-        <section id="number"></section>
+        <section id="number-section">
+            <div class="nmber-container">
+                <div class="number">
+                    <div class="number-img">
+                        <img src="./images/" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
      </main>
 </body>
 </html>
