added works section

--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style/project.css">
     <title>Rinterio</title>
 </head>
+
 <body>
     <!-- navbar section -->
-     <nav id="navbar">
+    <nav id="navbar">
         <div class="nav-container">
             <div class="nav-logo">
                 <div class="nav-img">
@@ -26,10 +31,10 @@
                 </ul>
             </div>
             <div class="nav-search">
-                <div class="search-1"  >
+                <div class="search-1">
                     <img src="./images/Frame 2.png" alt="">
                 </div>
-                <div class="search-2"  >
+                <div class="search-2">
                     <img src="./images/Frame 3.png" alt="">
                 </div>
                 <div class="search-3" id="nav-book">
@@ -41,24 +46,25 @@
                 </div>
             </div>
         </div>
-     </nav>
-     <!-- banner section -->
-     <section id="banner">
+    </nav>
+    <!-- banner section -->
+    <section id="banner">
         <div class="banner-container">
             <div class="banner-img">
                 <img src="./images/banner.png" alt="">
             </div>
             <div class="banner-text">
                 <h1>A barn house of this design has a striking appearance</h1>
-                <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+                <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring
+                    weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
                 <div id="banner-btn">
                     <span>View Details</span>
                     <img id="black" src="./images/Group 1.png" alt="">
                 </div>
             </div>
         </div>
-     </section>
-     <main id="hero">
+    </section>
+    <main id="hero">
         <section id="spaces">
             <div class="dotted-img">
                 <img src="./images/Vector 14.png" alt="">
@@ -72,7 +78,7 @@
                     <div class="rect-head">
                         <h2>We design thoughtful, liveable spaces</h2>
                         <p>The barn house captivates with its blend of
-                            rustic charm and 
+                            rustic charm and
                             modern sophistication, featuring weathered wood, sleek metal accents.
                         </p>
                     </div>
@@ -134,6 +140,22 @@
                 </div>
             </div>
         </section>
-     </main>
+        <section id="works">
+            <div class="works-container">
+                <div id="works-btn">
+                    <i class="fa-solid fa-arrow-right-to-bracket"></i>
+                    <p>How we works</p>
+                </div>
+                <div class="works-text">
+                    <h2>Our Works Process</h2>
+                    <p>The barn house captivates with its blend of rustic charm and modern
+                        sophistication, featuring
+                        weathered wood, sleek metal accents.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
