added card section in css

--- a/index.html
+++ b/index.html
@@ -121,22 +121,22 @@
                     <div class="number-img">
                         <img src="./images/comment-01.png" alt="">
                     </div>
-                    <h2>235+</h2>
-                    <p>Happy Client Review</p>
+                    <h2>50+</h2>
+                    <p>Work Departments</p>
                 </div>
                 <div class="number">
                     <div class="number-img">
                         <img src="./images/comment-01.png" alt="">
                     </div>
-                    <h2>235+</h2>
-                    <p>Happy Client Review</p>
+                    <h2>30K+</h2>
+                    <p>Our Happy Client</p>
                 </div>
                 <div class="number">
                     <div class="number-img">
                         <img src="./images/comment-01.png" alt="">
                     </div>
-                    <h2>235+</h2>
-                    <p>Happy Client Review</p>
+                    <h2>307+</h2>
+                    <p>Staff Members</p>
                 </div>
             </div>
         </section>
@@ -155,7 +155,45 @@
                 </div>
             </div>
         </section>
+        <div id="card">
+            <div class="card-container">
+                <div class="main-card" id="card-1">
+                    <div class="card-img">
+                        <img src="./images/concept.png" alt="">
+                        <h3>Concept</h3>
+                        <p>The barn house captivates with its blend of rustic charm and
+                            modern.
+                        </p>
+                    </div>
+                </div>
+                <div class="main-card" id="card-2">
+                    <div class="card-img">
+                        <img src="./images/flow-chart.png" alt="">
+                        <h3>Design Process</h3>
+                        <p>The barn house captivates with its blend of rustic charm and modern.
+                        </p>
+                    </div>
+                </div>
+                <div class="main-card" id="card-3">
+                    <div class="card-img">
+                        <img src="./images/vision.png" alt="">
+                        <h3>Supervision</h3>
+                        <p>The barn house captivates with its blend of rustic charm and modern.
+                        </p>
+                    </div>
+                </div>
+                <div class="main-card" id="card-4">
+                    <div class="card-img">
+                        <img src="./images/budget-planning.png" alt="">
+                        <h3>Budget Planning</h3>
+                        <p>The barn house captivates with its blend of rustic charm and modern.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
+    
 </body>
 
 </html>
