--- a/index.html
+++ b/index.html
@@ -193,7 +193,98 @@
             </div>
         </div>
     </main>
-    
+    <section id="explore">
+        <div class="explore-container">
+            <div id="explore-btn">
+                <i class="fa-solid fa-arrow-right-to-bracket"></i>
+                <p>Explore our Latest works</p>
+            </div>
+            <div class="explore-text">
+                <h2>Our Latest Portfolio</h2>
+                <p>The barn house captivates with its blend of rustic charm and modern
+                    sophistication, featuring
+                    weathered wood, sleek metal accents.</p>
+            </div>
+        </div>
+    </section>
+    <section id="flex">
+        <div class="flex-container">
+            
+        </div>
+    </section>
+    <section id="grid-section">
+        <div class="grid-container">
+            <div class="grid">
+                <div class="grid-img">
+                    <img src="./images/article1.png" alt="">
+                </div>
+                <div id="opacity">
+                    <div class="opacity-img">
+                        <img src="./images/calendar-03.png" alt="">
+                        <span> July14, 2024</span>
+                    </div>
+                    <div class="opacity-img">
+                        <img src="./images/user-circle.png" alt="">
+                        <span> By Admin</span>
+                    </div>
+                </div>
+                <h2>How to choose the furniture right  of your home.</h2>
+                <p>The barn house captivates with its blend of rustic charm and modern. </p>
+                <div class="icon">
+                    <h3>Read More </h3>
+                    <div class="icon-img">
+                        <img src="./images/Group 1.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="grid-img">
+                    <img src="./images/article1.png" alt="">
+                </div>
+                <div id="opacity ">
+                    <div class="opacity-img">
+                        <img src="./images/calendar-03.png" alt="">
+                        <span> July14, 2024</span>
+                    </div>
+                    <div class="opacity-img">
+                        <img src="./images/user-circle.png" alt="">
+                        <span> By Admin</span>
+                    </div>
+                </div>
+                <h2>How to choose the furniture right  of your home.</h2>
+                <p>The barn house captivates with its blend of rustic charm and modern. </p>
+                <div class="icon">
+                    <h3>Read More </h3>
+                    <div class="icon-img">
+                        <img src="./images/Group 1.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="grid-img">
+                    <img src="./images/article1.png" alt="">
+                </div>
+                <div id="opacity ">
+                    <div class="opacity-img">
+                        <img src="./images/calendar-03.png" alt="">
+                        <span> July14, 2024</span>
+                    </div>
+                    <div class="opacity-img">
+                        <img src="./images/user-circle.png" alt="">
+                        <span> By Admin</span>
+                    </div>
+                </div>
+                <h2>How to choose the furniture right  of your home.</h2>
+                <p>The barn house captivates with its blend of rustic charm and modern. </p>
+                <div class="icon">
+                    <h3>Read More </h3>
+                    <div class="icon-img">
+                        <img src="./images/Group 1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
