added discuss section

--- a/index.html
+++ b/index.html
@@ -207,9 +207,50 @@
             </div>
         </div>
     </section>
-    <section id="flex">
+    <section id="flex-section">
         <div class="flex-container">
-            
+            <div class="flex-1">
+                <div class="flex-1-container">
+                    <img src="./images/img1.png" alt="">
+                    <div class="flex-1-text">
+                        <h2>Commercial</h2>
+                        <p>The barn house captivates with its blend of rustic charm and modern. The barn house
+                            captivates with its blend of rustic charm and modern .</p>
+                        <div class="icon">
+                            <h3>View Details </h3>
+                            <div class="icon-img">
+                                <img src="./images/Group 1.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="flex-2">
+                <img src="./images/img2.png" alt="">
+            </div>
+            <div class="flex-3">
+                <img src="./images/img3.png" alt="">
+            </div>
+            <div class="flex-4">
+                <div class="flex-1-container">
+                    <img src="./images/img4.png" alt="">
+                    <div class="flex-1-text">
+                        <h2>Commercial</h2>
+                        <p>The barn house captivates with its blend of rustic charm and modern. The barn house
+                            captivates with its blend of rustic charm and modern .</p>
+                        <div class="icon">
+                            <h3>View Details </h3>
+                            <div class="icon-img">
+                                <img src="./images/Group 1.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="flex-5">
+                <img src="./images/img5.png" alt="">
+            </div>
+        </div>
         </div>
     </section>
     <section id="grid-section">
@@ -228,7 +269,7 @@
                         <span> By Admin</span>
                     </div>
                 </div>
-                <h2>How to choose the furniture right  of your home.</h2>
+                <h2>How to choose the furniture right of your home.</h2>
                 <p>The barn house captivates with its blend of rustic charm and modern. </p>
                 <div class="icon">
                     <h3>Read More </h3>
@@ -241,7 +282,7 @@
                 <div class="grid-img">
                     <img src="./images/article1.png" alt="">
                 </div>
-                <div id="opacity ">
+                <div id="opacity">
                     <div class="opacity-img">
                         <img src="./images/calendar-03.png" alt="">
                         <span> July14, 2024</span>
@@ -251,7 +292,7 @@
                         <span> By Admin</span>
                     </div>
                 </div>
-                <h2>How to choose the furniture right  of your home.</h2>
+                <h2>How to choose the furniture right of your home.</h2>
                 <p>The barn house captivates with its blend of rustic charm and modern. </p>
                 <div class="icon">
                     <h3>Read More </h3>
@@ -264,7 +305,7 @@
                 <div class="grid-img">
                     <img src="./images/article1.png" alt="">
                 </div>
-                <div id="opacity ">
+                <div id="opacity">
                     <div class="opacity-img">
                         <img src="./images/calendar-03.png" alt="">
                         <span> July14, 2024</span>
@@ -274,7 +315,7 @@
                         <span> By Admin</span>
                     </div>
                 </div>
-                <h2>How to choose the furniture right  of your home.</h2>
+                <h2>How to choose the furniture right of your home.</h2>
                 <p>The barn house captivates with its blend of rustic charm and modern. </p>
                 <div class="icon">
                     <h3>Read More </h3>
@@ -282,6 +323,37 @@
                         <img src="./images/Group 1.png" alt="">
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section id="discuss">
+        <div class="discuss-container">
+            <div id="discuss-btn">
+                <i class="fa-solid fa-arrow-right-to-bracket"></i>
+                <p>Let's Connect</p>
+            </div>
+            <div class="discuss-text">
+                <h2>Let's Discuss Next Project</h2>
+                <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring
+                    weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="discuss-form">
+                <form action="">
+                    <div class="first-form">
+                        <input class="form" type="text" name="" id="" placeholder="First Name*">
+                        <input class="form" type="text" name="" id="" placeholder="Last Name*">
+                    </div>
+                    <div class="second-form">
+                        <input class="form" type="number" name="" id="" placeholder="Phone Number*">
+                        <input class="form" type="email" name="" id="" placeholder="Email Number*">
+                    </div>
+                    <textarea class="text" name="" id="" cols="100" rows="13"
+                        placeholder="Write your message here"></textarea>
+                    <div class="mail-btn">
+                        <input class="mail" type="button" value="Send Mail">
+
+                    </div>
+                </form>
             </div>
         </div>
     </section>
