added footer section

--- a/index.html
+++ b/index.html
@@ -351,12 +351,33 @@
                         placeholder="Write your message here"></textarea>
                     <div class="mail-btn">
                         <input class="mail" type="button" value="Send Mail">
-
-                    </div>
+                    </div> 
                 </form>
             </div>
         </div>
     </section>
+    <footer id="footer">
+        <div class="footer-continer">
+            <div class="footer-logo">
+                <div class="footer-img">
+                    <img id="black" src="./images/Group 1.png" alt="">
+                </div>
+                <span>Rinterio</span>
+            </div>
+            <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <ul>
+                <li>home</li>
+                <li>Services</li>
+                <li>Portfolio</li>
+                <li>Blogs</li>
+                <li>Contact Us</li>
+            </ul>
+            <div class="footer-btn">
+                    <span>Book Consult</span>
+                    <img id="black" src="./images/Group 1.png" alt="">
+                </div>
+        </div>
+    </footer>
 </body>
 
 </html>
